@@ -1,5 +1,5 @@
-# yesno.m4 serial 1
-dnl Copyright (C) 2002 Free Software Foundation, Inc.
+# yesno.m4 serial 2
+dnl Copyright (C) 2002-2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -8,6 +8,6 @@ dnl the same distribution terms as the rest of that program.
 
 AC_DEFUN([gl_YESNO],
 [
-  dnl Prerequisites of lib/yesno.c.
-  AC_CHECK_HEADERS_ONCE(stdlib.h)
+  dnl No prerequisites of lib/yesno.c.
+  :
 ])
